--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,6 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
-    <groupId>guru.springframework</groupId>
-    <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>sfg-pet-clinic</name>
-    <description>SFG Pet Clinic Project</description>
-
     <modules>
         <module>pet-clinic-data</module>
         <module>pet-clinic-web</module>
@@ -20,6 +14,12 @@
         <version>2.2.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+    <groupId>guru.springframework</groupId>
+    <artifactId>sfg-pet-clinic</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>sfg-pet-clinic</name>
+    <description>SFG Pet Clinic Project</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -34,6 +34,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <goals>
+                        install
+                    </goals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
             </plugin>
         </plugins>
     </build>
