--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,6 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <dependencies>
-
-    </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -47,5 +43,11 @@
             </plugin>
         </plugins>
     </build>
+
+    <scm>
+        <developerConnection>
+            scm:git:https://github.com/tgmtejas/sfg-pet-clinic.git
+        </developerConnection>
+    </scm>
 
 </project>
